# nlp-augment

./: .gitignore  CHANGELOG.md  PLAN.md  README.md  REFACTOR_INVENTORY.md  SPEC.md  config.yaml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
app/: main.py  schema.py  settings.py  transformers.yaml
app/core/: operations.py
app/core/common/: extract.py  generate.py  headings.py  relevance.py
app/core/metrics/: polarity.py  sentiment.py  spam.py  style.py
app/crud/: database.py  metrics.py  registry.py  tables.py
app/database/: database.py
app/models/: general.py  generative.py  sentiment.py
app/schemas/: __init__.py  metrics.py  response.py  summary.py  tags.py
app/services/: operations.py  orchestration.py
examples/: compare.json  extract.json  text.json  title.json
src/mdaug/: __init__.py
src/mdaug/cli/: __init__.py  __main__.py  app.py  commands.py
src/mdaug/common/: config.py  provider_config.py
src/mdaug/core/: README.md  operations.py
src/mdaug/providers/: __init__.py  factory.py  interfaces.py  mock.py  registry.py
src/mdaug/schemas/: __init__.py  errors.py  io.py
src/mdaug/service/: __init__.py  runtime.py
tests/: conftest.py
tests/integration/: conftest.py  test_metrics.py  test_metrics_route.py  test_summary.py  test_summary_route.py  test_tags_route.py
tests/integration/core/: test_demo_smoke.py
tests/integration/docs/: test_examples_contract.py
tests/smoke/: test_cli_smoke.py
tests/unit/: test_core.py  test_models.py  test_summary.py  test_tags.py
tests/unit/core/: test_core.py  (+6 more)
(+17 files in other folders)
