[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nlp-mdaug"
version = "0.1.0"
dependencies = ["PyYAML>=6.0"]
requires-python = ">= 3.10"

[project.scripts]
mdaug = "mdaug.cli.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["mdaug*"]
